--- a/package.json
+++ b/package.json
@@ -8,13 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
+    "@googlemaps/js-api-loader": "^1.12.8",
+    "@googlemaps/react-wrapper": "^1.1.12",
+    "@googlemaps/typescript-guards": "^1.0.1",
     "@mui/icons-material": "^5.1.1",
+    "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.1",
+    "@react-google-maps/api": "^2.7.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.25.0",
+    "express-validator": "^6.13.0",
+    "fast-equals": "^2.0.3",
     "iron-session": "^6.0.2",
     "match-sorter": "^6.3.1",
     "mongoose": "^6.0.13",
@@ -22,7 +31,7 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.5",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-table": "^7.7.0",
     "regenerator-runtime": "^0.13.4",
     "styled-components": "^5.3.3",
