--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-COOKIE_NAME=
-COOKIE_PASSWORD=
-MONGODB_URI=
-EMAIL_ADMIN=
+COOKIE_NAME="GHIMG_COOKIE"
+COOKIE_PASSWORD="complex_password_at_least_32_characters_long"
+MONGODB_URI="mongodb://localhost:27017/chimg"
+EMAIL_ADMIN="admin@gmail.com"
+GIT="git push https://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@github.com/persontechnology/chimg.git"
