--- a/package.json
+++ b/package.json
@@ -12,25 +12,24 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
-    "@googlemaps/js-api-loader": "^1.12.8",
-    "@googlemaps/react-wrapper": "^1.1.12",
-    "@googlemaps/typescript-guards": "^1.0.1",
     "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.1",
-    "@react-google-maps/api": "^2.7.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.25.0",
+    "date-fns-tz": "^1.1.6",
+    "dom-to-pdf": "^0.2.2",
     "express-validator": "^6.13.0",
     "fast-equals": "^2.0.3",
     "iron-session": "^6.0.2",
     "match-sorter": "^6.3.1",
+    "moment-timezone": "^0.5.34",
     "mongoose": "^6.0.13",
     "namor": "^2.0.3",
     "next": "12.0.4",
+    "pspdfkit": "^2021.6.1",
     "react": "17.0.2",
-    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-table": "^7.7.0",
     "regenerator-runtime": "^0.13.4",
